--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<link href="style.css" rel="stylesheet">
 </head>
 <body style="background: #dbdbdb;">
-<h3>GROUP MEMBERS: <br>Muhammad Hamza Saleem -- 63712<br>Sheheryar Shah -- 63617</h3>
+<h3>GROUP MEMBERS:</h3>
+<h3>Muhammad Hamza Saleem -- 63712<br>Sheheryar Shah -- 63617</h3>
 <label id="n-container">
 	<label>N = <input style="width:200px;" id="n" type="number" value="1"/></label>
 	<label id="delay-container">
